kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-rating
  labels:
    app.kubernetes.io/name: weather-rating
